Fix whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https: //ranger-4297.github.io/about-me/assets/images/background.png');
+    background-image: url('https://ranger-4297.github.io/about-me/assets/images/background.png');
     background-size: cover;
 }
 
